--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "SigSciCaptcha"
+name = "CAPTCHA"
 version = "0.2.0"
 authors = []
 edition = "2018"
@@ -8,13 +8,13 @@ edition = "2018"
 debug = true
 
 [dependencies]
-fastly = "^0.7.0"
-http = "0.2.3"
-captcha = "0.0.8"
+fastly = "0.9.8"
+http = "0.2.9"
+captcha = "0.0.9"
 
-lazy_static = "^1.4.0"
+lazy_static = "1.4.0"
 
-hmac-sha256 = "0.1.6"
-cookie = { version = "0.14.3", features = ["signed"] }
-hex = "0.4.2"
+hmac-sha256 = "1.1.7"
+cookie = { version = "0.18.0", features = ["signed"] }
+hex = "0.4.3"
 
